src/objects/Tax_Backup__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hamlet__c</fullName>
        <label>Hamlet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>TaxRate</label>
        <precision>14</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Tax Backup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ZipCode__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Hamlet__c</columns>
        <columns>State__c</columns>
        <columns>TaxRate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TB-{0000000}</displayFormat>
        <label>Tax Backup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Backups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>